[gd_scene load_steps=16 format=3 uid="uid://dq3erjug3kbl0"]

[ext_resource type="Script" path="res://Stations/Test/Interaction.gd" id="1_hlwgq"]
[ext_resource type="PackedScene" uid="uid://dxvk34wve7au7" path="res://Stations/Test/TestStationUI.tscn" id="2_is7mk"]
[ext_resource type="Texture2D" uid="uid://in03j4jt5h21" path="res://assets/code_station.png" id="3_qdc5q"]
[ext_resource type="Texture2D" uid="uid://w5u3xqfg2o0b" path="res://assets/button.png" id="4_jivko"]

[sub_resource type="ViewportTexture" id="ViewportTexture_m3wio"]
viewport_path = NodePath("Interaction/SubViewport")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3valc"]
resource_local_to_scene = true
transparency = 1
shading_mode = 0
albedo_texture = SubResource("ViewportTexture_m3wio")

[sub_resource type="ViewportTexture" id="ViewportTexture_wbgvw"]
viewport_path = NodePath("Interaction/SubViewport")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kw73l"]
resource_local_to_scene = true
transparency = 1
shading_mode = 0
albedo_texture = SubResource("ViewportTexture_wbgvw")
billboard_mode = 1
billboard_keep_scale = true

[sub_resource type="QuadMesh" id="QuadMesh_rpjyf"]
material = SubResource("StandardMaterial3D_kw73l")

[sub_resource type="BoxShape3D" id="BoxShape3D_v1wkg"]
size = Vector3(0.262848, 0.35199, 0.272949)

[sub_resource type="BoxShape3D" id="BoxShape3D_r1dhf"]
size = Vector3(0.314362, 0.341064, 0.173401)

[sub_resource type="Animation" id="Animation_0hds7"]
resource_name = "Off"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ButtonSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_2a3qt"]
resource_name = "On"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ButtonSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ButtonSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_sem0y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ButtonSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ButtonSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nexk5"]
_data = {
"Off": SubResource("Animation_0hds7"),
"On": SubResource("Animation_2a3qt"),
"RESET": SubResource("Animation_sem0y")
}

[node name="TestStation" type="Node3D"]
transform = Transform3D(0.615, 0, 0, 0, 0.615, 0, 0, 0, 0.615, 0, 0, 0)

[node name="Interaction" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0857514, 0.442632, 0.0871172)
script = ExtResource("1_hlwgq")

[node name="Display" type="MeshInstance3D" parent="Interaction"]
transform = Transform3D(1.35782, 0, 0, 0, 0.818596, 0, 0, 0, 1.00374, 0.0217917, 0.277664, 0.0678239)
material_override = SubResource("StandardMaterial3D_3valc")
mesh = SubResource("QuadMesh_rpjyf")
skeleton = NodePath("../..")

[node name="SubViewport" type="SubViewport" parent="Interaction"]
disable_3d = true
transparent_bg = true

[node name="TestStationUI" parent="Interaction/SubViewport" instance=ExtResource("2_is7mk")]

[node name="InteractShape" type="CollisionShape3D" parent="Interaction"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00355531, 0.0143127, -0.00219727)
shape = SubResource("BoxShape3D_v1wkg")

[node name="MachineSprite" type="Sprite3D" parent="Interaction"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.129018, 0)
shaded = true
alpha_cut = 2
texture_filter = 0
texture = ExtResource("3_qdc5q")

[node name="BodyCollider" type="StaticBody3D" parent="Interaction"]

[node name="BodyShape" type="CollisionShape3D" parent="Interaction/BodyCollider"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00135803, -0.0284424, -0.063324)
shape = SubResource("BoxShape3D_r1dhf")

[node name="ButtonSprite" type="Sprite3D" parent="Interaction"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.57109, 0)
visible = false
texture_filter = 0
texture = ExtResource("4_jivko")
hframes = 2

[node name="Animation" type="AnimationPlayer" parent="Interaction"]
libraries = {
"": SubResource("AnimationLibrary_nexk5")
}

[connection signal="body_entered" from="Interaction" to="Interaction" method="_on_body_entered"]
[connection signal="body_exited" from="Interaction" to="Interaction" method="_on_body_exited"]
